# agent

./: .env.example  .gitignore  .rules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  ENGINE.md  PROBES.md  README.md  RELEASES.md  REVIEW.md  ROADMAP.md  SECURITY.md  deny.toml  install.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: audit.yml  ci-privileged-hosted.yml  ci-privileged.yml  ci.yml  fuzz.yml  release.yml
crates/agent-protocol/: Cargo.toml
crates/agentd-client/: Cargo.toml
crates/agentd-protocol/: Cargo.toml
crates/channel/: Cargo.toml
crates/channel/src/: fuzz_tests.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: audit.rs  config.rs  doctor.rs  lib.rs  main.rs  metrics.rs  policy.rs  registry.rs  serve.rs  session.rs  trace.rs  verify.rs  watch.rs
crates/cli/src/agentd/: main.rs  metrics.rs  session.rs
crates/cli/tests/: agentd_e2e.rs  cli_daemon_golden.rs  serve_e2e.rs  trace_e2e.rs
crates/eke-channel/: Cargo.toml
crates/eke-client/: Cargo.toml
crates/eke-client/src/: lib.rs
crates/eke-guest-agent/: Cargo.toml
crates/eke-guest-agent/src/: lib.rs  main.rs
crates/eke-guest-agent/tests/: exec.rs
crates/eke-probes-common/: Cargo.toml
crates/eke-probes-loader/: Cargo.toml
crates/eke-protocol/: Cargo.toml
crates/eke-test-support/: Cargo.toml
crates/guest-agent/: Cargo.toml
crates/kee-client/: Cargo.toml
crates/kee-protocol/: Cargo.toml
crates/kee-protocol/src/: lib.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: http.rs  lib.rs  massive.rs
crates/market-data/tests/: contract.rs
crates/market-data/tests/fixtures/: aggs_ok.json  chain_ok.json
crates/probes/: Cargo.toml  rust-toolchain.toml
crates/probes-common/: Cargo.toml
crates/probes-loader/: Cargo.toml
crates/probes-loader/examples/: count_execve.rs  monitor_tap.rs  reference_integration.rs  trace_syscalls.rs
crates/probes-loader/src/: json.rs  lib.rs  observer.rs  record.rs  signing.rs  summary.rs
crates/probes-loader/tests/: audit_record.rs  counter.rs  hardening.rs  net_enforce.rs  net_flows.rs  resource_meter.rs  tap.rs  tracer.rs
crates/probes/.cargo/: config.toml
crates/probes/src/: main.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/vmm/: Cargo.toml
crates/vmm/src/: doctor.rs  drives.rs  exec.rs  firecracker.rs  jail.rs  lib.rs  lifetime.rs  net.rs  pool.rs  proc.rs  snapshot.rs  spawn.rs  sweep.rs  vm.rs
crates/vmm/tests/: boot.rs  confinement.rs  exec.rs  net.rs  sandbox.rs  snapshot.rs
crates/vmm/tests/common/: mod.rs
docs/: 001-boot-a-microvm.md  003-rootfs-and-runtimes.md  README.md  SUMMARY.md  benchmarks.md  cli-install.md  cli.md  contributing-architecture.md  contributing-building.md  contributing-fuzzing.md  contributing-testing.md  contributing.md  daemon.md  embedding.md  examples-agent-containment.md  examples-ci-job.md  examples-observe-a-run.md  examples-untrusted-binary.md  examples-untrusted-code.md  examples.md  host-hardening.md  introduction.md  probes.md  quickstart.md  security.md  stability.md  supply-chain.md  threat-model.md
docs/adr/: 001-drive-firecracker-via-its-http-api-over-a-unix-socket.md  002-host-guest-channel-vsock-a-tiny-guest-agent.md  003-the-guest-rootfs-a-pinned-alpine-base-assembled-with.md  004-read-only-base-rootfs-a-per-run-tmpfs-overlay.md  005-bulk-input-via-a-read-only-second-block-device.md  006-bulk-output-via-a-read-after-death-writable-block.md  007-a-byte-for-byte-reproducible-rootfs-build.md  008-guest-networking-is-deny-by-default-a-tap-with-no.md  009-snapshots-are-self-contained-bundles-restored-by.md  009-the-per-vm-tap-shelled-out-to-ip-deleted-on-every.md  010-snapshots-are-self-contained-bundles-restored-by.md  011-restore-identity-the-agent-re-addresses-the-clone.md  012-confine-the-vmm-run-firecracker-under-its-jailer.md  013-per-run-resource-policy-one-limits-struct-of.md  013-the-engine-hoster-security-line-the-engine-s-tools-can.md  014-cgroup-owned-vm-lifetime-a-sentinel-that-outlives-the.md  015-jailed-execution-is-the-convergence-target-the-sandbox.md  015-per-exec-inputs-files-env-ride-the-exec-channel-under.md  016-the-engine-hoster-security-line-the-engine-s-tools-can.md  017-per-vm-network-namespace-the-tap-lives-in-the-vm-s.md  017-the-ebpf-loader-aya-an-object-loaded-from-a-path-and.md  018-per-exec-inputs-files-env-ride-the-exec-channel-under.md  019-the-vm-is-the-session-one-persistent-in-guest-working.md  020-the-ebpf-loader-aya-an-object-loaded-from-a-path-and.md  021-bind-the-tap-monitor-to-a-sandbox-by-entering-its.md  021-syscall-observability-a-ring-buffer-of-per-event.md  022-multi-tenant-safety-is-airtight-per-run-isolation.md  023-network-observation-tc-clsact-on-the-tap-a-per-flow-5.md  023-resource-accounting-one-shared-sched-switch-program.md  024-bind-the-tap-monitor-to-a-sandbox-by-entering-its.md  024-the-audit-record-converges-a-shared-syscall-tracer-a.md  025-egress-policy-a-per-vm-allow-list-in-an-ebpf-map-deny.md  025-the-observability-face-the-cli-carries-the-audit.md  026-allow-projects-the-egress-policy-enforcement-is-a.md  026-resource-accounting-one-shared-sched-switch-program.md  027-the-agent-toml-config-file-layer-nearest-up-from-cwd.md  027-the-per-run-audit-record-lives-in-probes-loader-out-of.md  028-agent-doctor-shares-one-host-check-implementation-the.md  028-the-audit-record-converges-a-shared-syscall-tracer-a.md  029-the-observability-face-the-cli-carries-the-audit.md  (+15 more)
docs/examples/: ci-job.sh  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: channel_frame.rs  channel_handshake.rs  channel_request.rs  channel_response.rs  protocol_message.rs  signing_envelope.rs  syscall_event.rs
fuzz/seeds/protocol_message/: req_exec  req_get  req_multi  req_open  req_put  resp_error  resp_opened  resp_result
fuzz/seeds/signing_envelope/: valid_chain  valid_plain
fuzz/seeds/syscall_event/: event_exec  ipv4_tcp
xtask/: Cargo.toml
(+47 files in other folders)
