# `cargo fuzz` harness for the untrusted-input decoders: the host↔guest wire (channel) and the
# signed-record envelope (attacker-relayed by design, decision 034). Kept OUT of the main workspace
# on purpose: it needs a nightly toolchain and libFuzzer, so it must never be pulled into
# `cargo build` or `cargo xtask ci`. Its own `[workspace]` table below detaches it; run it with
# `cargo xtask fuzz` (or `cargo fuzz run <target>`). See `docs/contributing-fuzzing.md`.
[package]
name = "kee-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kee-channel]
path = "../crates/channel"
features = ["fuzzing"]

# The signed-record envelope surface (`verify`/`verify_chain`/`TrustedKey::from_hex`); the public
# API is exactly the fuzz surface, so no feature flag is needed.
[dependencies.kee-probes-loader]
path = "../crates/probes-loader"

# The daemon's untrusted-client wire (`read_message` over the newline-JSON contract). The `fuzzing`
# feature exposes the internal line reader + schema gate behind module `fuzz`.
[dependencies.kee-protocol]
path = "../crates/kee-protocol"
features = ["fuzzing"]

# The shared eBPF-boundary parsers (`SyscallEvent::from_bytes`, `parse_ipv4_5tuple`). `std` gives the
# host-side formatting helpers; the parse surface itself is public, so no feature flag is needed.
[dependencies.kee-probes-common]
path = "../crates/probes-common"
features = ["std"]

# A separate one-crate workspace: detaches this crate from the repo's workspace so the everyday
# stable gate never tries to build it.
[workspace]

# libFuzzer wants some debug info even in release for useful crash traces.
[profile.release]
debug = 1

[[bin]]
name = "channel_response"
path = "fuzz_targets/channel_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "channel_request"
path = "fuzz_targets/channel_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "channel_frame"
path = "fuzz_targets/channel_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "channel_handshake"
path = "fuzz_targets/channel_handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signing_envelope"
path = "fuzz_targets/signing_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "protocol_message"
path = "fuzz_targets/protocol_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "syscall_event"
path = "fuzz_targets/syscall_event.rs"
test = false
doc = false
bench = false
