[package]
name = "agent-channel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The host↔guest wire protocol for the sandbox exec channel (docs/contributing-architecture.md ADR 002)."

# Near dependency-free by design: the protocol is hand-rolled over `std::io::{Read, Write}` so it
# stays tiny and transport-agnostic (vsock in the guest, a unix socket in tests), and both the host
# driver and the guest agent can depend on it without pulling a serialization stack into a static
# binary. The one exception is `zeroize`: a `no_std`, zero-transitive-dep crate that gives the
# post-send secret wipe a volatile store the optimizer cannot elide (see `write_exec`/`write_put_file`
# and ADR 015). `fill(0)` was dead-store-eligible; this is the fix that keeps the host path
# `unsafe`-free (the volatile write lives inside the audited crate, not our code).
[dependencies]
zeroize = { workspace = true }

# Off by default. Exposes the internal wire decoders (module `fuzz`) so the `cargo fuzz` targets in
# `fuzz/` can drive them; never enabled in the normal build, so the crate stays dependency-free and
# the wire contract is unchanged. See `docs/contributing-fuzzing.md`.
[features]
fuzzing = []

[lints]
workspace = true
