[package]
name = "kee-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The agent wire protocol: the versioned newline-JSON contract the daemon and its clients (the reference client, the polyglot SDKs) share."

# Deliberately a leaf: serde only, **no `kee-vmm`**. The wire is the contract, not shared Rust
# internals, so a non-Rust SDK reimplements these JSON shapes without linking the engine. The one
# adversarial concern is guardrail 5 (bounded, typed decode), which is pure std.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Off by default. Exposes the internal line reader + schema-gated decoder (module `fuzz`) so the
# `cargo fuzz` target in `fuzz/` can drive the daemon's untrusted-client parse path directly; never
# enabled in the normal build. See `docs/contributing-fuzzing.md`.
[features]
fuzzing = []

[lints]
workspace = true
