[package]
name = "market-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Market-data providers implementing exub-core's MarketDataProvider trait (mocks now; Massive, Alpha Vantage next)."

[features]
# The live Massive adapter (Phase 7). Off by default at the crate level; the CLI turns it on
# via its own default feature, so `cargo build -p market-data` stays lean and offline while a
# default `exub` build has real HTTP. `tokio/time` powers the retry backoff's `sleep`.
massive-live = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:secrecy", "dep:tokio", "dep:tracing", "tokio/time"]

[dependencies]
exub-core = { path = "../core" }
# Async provider impls (the seams are `async`).
async-trait.workspace = true
# Live-feed HTTP stack — all optional, pulled in only by `massive-live`, so the mock path
# builds with no HTTP deps at all.
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
# A runtime to drive the async provider methods in `#[tokio::test]`. The wider feature set
# (net/time/rt-multi-thread) is what wiremock's server + reqwest's client need — `#[tokio::test]`'s
# `enable_all()` only wires up the IO/time drivers when those features are compiled in.
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "net", "time"] }
# A local mock HTTP server: the contract tests replay recorded shapes so API drift fails CI.
wiremock.workspace = true

[lints]
workspace = true
