[package]
name = "agent-probes-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Userspace loader — attach the eBPF probes to a sandbox, read their maps, stream events."

[dependencies]
# Skeleton has no deps yet. Phase 8+ adds `aya` (userspace) + tracing to load/attach the probes in
# `crates/probes` and stream their maps into the flight recorder.

[lints]
workspace = true
