[package]
name = "agent-vmm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "The Firecracker driver — microVM lifecycle, networking, snapshots, and the Sandbox API."

[dependencies]
# The Firecracker API is JSON over a unix socket: serde builds the request bodies, serde_json
# (de)serializes, and a tiny hand-rolled HTTP/1.1 client over `std::os::unix::net::UnixStream`
# speaks to it — no async runtime, no HTTP crate. The host path stays `unsafe`-free.
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
